Bug 146621 - Press OK in the Document recovery dialog doesn't terminate soffice.bin but maxing out a single core
Summary: Press OK in the Document recovery dialog doesn't terminate soffice.bin but ma...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.4.0 target:7.3.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-06 16:00 UTC by Telesto
Modified: 2022-01-10 17:40 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-01-06 16:00:05 UTC
Description:
Press OK in the Document recovery dialog doesn't terminate soffice.bin but maxing out a single core

Steps to Reproduce:
1. Open attachment 177347 [details]
2. Place the cursor in the top left table cell
3. CTRL+A
4. F12 (toggle numbering on)
5. CTRL+Z -> Crash
6. Recovery dialog appears
7. Press OK -> Look in process manager for soffice.bin

Actual Results:
soffice.bin maxing out a single core

Expected Results:
Restart


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1bb0e177124d5d6661b72df6c7d848fb23639652
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2022-01-06 16:01:09 UTC
Closely related to bug 146615. Crash itself is bug 146614
Comment 2 Mike Kaganski 2022-01-07 08:26:28 UTC
https://gerrit.libreoffice.org/c/core/+/128097
Comment 3 Commit Notification 2022-01-07 13:31:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/639419601a3730eb84d0922ef3a540c961b81910

tdf#146621: handle an exception that may hang process at ExitProcess time

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-01-10 17:40:23 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/1dff55f964bcf4a5c3fc1c1381d706125262bc2b

tdf#146621: handle an exception that may hang process at ExitProcess time

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.