tdf#146621: handle an exception that may hang process at ExitProcess time

Change-Id: I3ffc2303ae1851ab909612ae9bb7f70a077b24fe